--- a/mods/gra/sequences/infantry.yaml
+++ b/mods/gra/sequences/infantry.yaml
@@ -236,6 +236,9 @@ e3:
 		Start: 192
 		Length: 10
 		Facings: 8
+    garrison-muzzle:
+		Length: 0
+		Facings: 8
 	icon: e3icon
 
 e6:
@@ -305,6 +308,9 @@ e6:
 		Length: 4
 		Facings: 8
 		Tick: 100
+    garrison-muzzle:
+		Length: 0
+		Facings: 8
 	icon: e6icon
 
 medi:
@@ -497,6 +503,9 @@ e2:
 	prone-throw:
 		Start: 288
 		Length: 12
+		Facings: 8
+    garrison-muzzle:
+		Length: 0
 		Facings: 8
 	icon: e2icon
 
@@ -818,6 +827,9 @@ e4:
 		Start: 256
 		Length: 16
 		Facings: 8
+    garrison-muzzle:
+		Length: 0
+		Facings: 8
 	icon: e4icon
 
 gnrl:
@@ -962,6 +974,9 @@ shok:
 		TilesetOverrides:
 			DESERT: TEMPERAT
 			INTERIOR: TEMPERAT
+    garrison-muzzle:
+		Length: 0
+		Facings: 8
 	icon: shokicon
 
 c1:
@@ -1025,6 +1040,9 @@ c1:
 		Length: 6
 		Facings: 8
 		Tick: 80
+    garrison-muzzle:
+		Length: 0
+		Facings: 8
     icon: e1
 
 c2:
