Attempt to get CNC palette

--- a/mods/gra/sequences/structures.yaml
+++ b/mods/gra/sequences/structures.yaml
@@ -668,6 +668,12 @@ gtwr:
 	muzzle: minigun
 		Length: 6
 		Facings: 8
+    PlayerColorPalette:
+        BasePalette: playerCNC
+        BaseName: player
+        RemapIndex: [176, 178, 180, 182, 184, 186, 189, 191, 177, 179, 181, 183, 185, 187, 188, 190]
+        Ramp: 0.05
+        AllowModifiers: True
 	bib: mbGTWR
 		UseTilesetExtension: true
 		TilesetOverrides:
