--- a/mods/gra/sequences/infantry.yaml
+++ b/mods/gra/sequences/infantry.yaml
@@ -1504,6 +1504,9 @@ rmbo:
 		Length: 4
 		Tick: 1600
 		ZOffset: -511
+    garrison-muzzle:
+		Length: 0
+		Facings: 8
 	icon: rmboicnh.tem
 		AddExtension: False
         
